# vulkan-kompute

./: CMakeLists.txt  setup.py
.github/workflows/: cpp_tests.yml  python_tests.yml  test_wheels.yml  vulkan_versions_test.yml  wheels.yml
python/: CMakeLists.txt
src/: CMakeLists.txt  Manager.cpp  Shader.cpp
